<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="edit_hint">Enter a title for a crime</string>
    <string name="title_view">TITLE</string>
    <string name="crime_detail_label">Crime Detail</string>
    <string name="crime_solved">Solved?</string>
    <string name="crime_title">Crimes</string>
    <string name="date_picker_title">Date of crime: </string>
    <string name="set_hour">Set hour</string>
    <string name="set_time">Time of crime: </string>
    <string name="time_button_text">Set time of crime</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>
    <string name="no_element_list">No element in the list</string>
    <string name="delete_crime_in_fragment">Delete this crime</string>
    <string name="take">Take</string>
    <string name="suspend_text">Suspend</string>
    <string name="report_text">Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
